adding stop function ⏹️

--- a/index.html
+++ b/index.html
@@ -11,10 +11,11 @@
       <audio id="Music">
         <source src="chika-1.wav" type="audio/wav" />
       </audio>
-      <button id="ReplayButton" type="button">🔁 Play/Repeat</button>
+      <button id="PlayButton" type="button" onclick="disableButton()">▶️ Play</button>
+      <button id="StopButton" type="button" onclick="enablePlayButton()">⏹️ Stop</button>
     </div>
     <div class="container-content">
-      <span class="lyrics" id="Intro1">Ichigo Mashimaro Character Song</span>
+      <span class="lyrics" id="Intro1">Itou Chika Character Song</span>
       <span class="lyrics" id="Intro2">Original story by: Barasui</span>
       <span class="lyrics" id="Intro3">Provided by: Geneon Inc</span>
       <span class="lyrics" id="Intro4">Sore Wa Suteki Na Showtime</span>
