--- a/index.html
+++ b/index.html
@@ -4,52 +4,15 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="css/styles.css" />
-    <title>Mashimaro TV</title>
+    <title></title>
   </head>
   <body>
-    <div class="container-media-control">
-      <audio id="Music">
-        <source src="chika-1.wav" type="audio/wav" />
-      </audio>
-      <button id="PlayButton" type="button" onclick="disableButton()">▶️ Play</button>
-      <button id="StopButton" type="button" onclick="enablePlayButton()">⏹️ Stop</button>
-    </div>
-    <div class="container-content">
-      <span class="lyrics" id="Intro1">Itou Chika Character Song</span>
-      <span class="lyrics" id="Intro2">Original story by: Barasui</span>
-      <span class="lyrics" id="Intro3">Provided by: Geneon Inc</span>
-      <span class="lyrics" id="Intro4">Sore Wa Suteki Na Showtime</span>
-      <span class="lyrics" id="Intro5">Sung by: Saeko Chiba (as Itou Chika)</span>
-
-      <span class="lyrics" id="Verse1-1">Yake ni heiwa na asa</span>
-      <span class="lyrics" id="Verse1-2">Puchi kodoku na shichue-shon</span>
-      <span class="lyrics" id="Verse2-1">Juwaki wo niramitsutsu</span>
-      <span class="lyrics" id="Verse2-2">Ridaiyaru no botan oshita</span>
-      <span class="lyrics" id="Verse3-1">Sakki kara hanashichuu bakka</span>
-      <span class="lyrics" id="Verse3-1-1">Ichijikan</span>
-      <span class="lyrics" id="Verse3-2">Nantoka shite yo nee kamisama</span>
-      <span class="lyrics" id="Verse4-1">Ripi-to suru</span>
-      <span class="lyrics" id="Verse4-1-1">Zetsubou</span>
-      <span class="lyrics" id="Verse4-2">Ripi-to shiro</span>
-      <span class="lyrics" id="Verse4-2-1">Kibou</span>
-
-      <span class="lyrics" id="Chorus1-1">Koe ga kikitai</span>
-      <span class="lyrics" id="Chorus1-2">Konna ni kikitai</span>
-      <span class="lyrics" id="Chorus2-1">Dekiru nara</span>
-      <span class="lyrics" id="Chorus2-1-1">Saizenretsu no</span>
-      <span class="lyrics" id="Chorus2-2">Domannaka ga ii</span>
-      <!-- Adlibs1-1 -->
-      <span class="lyrics" id="Chorus3-1">Kitto tsunagaru</span>
-      <span class="lyrics" id="Chorus3-2">Anata ni tsunagaru</span>
-      <span class="lyrics" id="Chorus4-1">"Chiketto wa</span>
-      <span class="lyrics" id="Chorus4-1-1">gogo ichiji kara</span>
-      <span class="lyrics" id="Chorus4-1-2">yoyaku kaishi desu"</span>
-      <!-- Adlibs1-2 -->
-    </div>
-    <div class="container-content">
-      <span class="adlibs" id="Adlib1-1">(Muri da yo ne-)</span>
-      <span class="adlibs" id="Adlib1-2">(Are- chotto hayakatta ka)</span>
-    </div>
-    <script src="js/main.js"></script>
+    <header id="Header-Title"></header>
+    <nav>
+      <ul>
+        <li><a href="itou-chika/index.html">Itou Chika Character Song</a></li>
+      </ul>
+    </nav>
+    <script src="js/route.js"></script>
   </body>
 </html>
