minimal styling & animation

--- a/index.html
+++ b/index.html
@@ -4,15 +4,14 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="css/styles.css" />
-    <title></title>
+    <title>Mashimaro TV</title>
   </head>
   <body>
-    <header id="Header-Title"></header>
-    <nav>
+    <div class="home-container">
+      <h3>📺 Mashimaro TV</h3>
       <ul>
-        <li><a href="itou-chika/index.html">Itou Chika Character Song</a></li>
+        <li><a href="itou-chika/index.html">Sore Wa Suteki Na Showtime</a></li>
       </ul>
-    </nav>
-    <script src="js/route.js"></script>
+    </div>
   </body>
 </html>
