--- a/itou-chika/index.html
+++ b/itou-chika/index.html
@@ -4,64 +4,63 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="../css/styles.css" />
-    <title></title>
+    <!-- Howler CDN -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/howler/2.2.3/howler.min.js"></script>
+    <title>Strawberry Marshmallow</title>
   </head>
   <body>
-    <header id="Header-Title"></header>
-    <nav>
-      <ul>
-        <li><a href="/index.html">Return</a></li>
-      </ul>
-    </nav>
+    <h3>🍓 Strawberry Marshmallow</h3>
     <div class="container-media-control">
       <audio id="Music">
         <source src="audio.mp3" type="audio/mp3" />
+        Your browser does not support the audio element.
       </audio>
-      <button id="PlayButton" type="button" onclick="disableButton()">▶️ Play</button>
-      <button id="StopButton" type="button" onclick="enablePlayButton()">⏹️ Stop</button>
+      <button id="PlayButton" type="button" onclick="disableButton()">Play</button>
+      <button id="StopButton" type="button" onclick="enablePlayButton()">Stop</button>
     </div>
-    <!-- Temporary -->
-    <div style="margin-top: 1rem; color: green">
-      <div id="Seconds">Seconds : 0</div>
-      <div id="Humanize">00:00</div>
-    </div>
-    <div class="container-content">
-      <span class="lyrics" id="Intro1">Itou Chika Character Song</span>
-      <span class="lyrics" id="Intro2">Original story by: Barasui</span>
-      <span class="lyrics" id="Intro3">Provided by: Geneon Inc</span>
-      <span class="lyrics" id="Intro4">Sore Wa Suteki Na Showtime</span>
-      <span class="lyrics" id="Intro5">Sung by: Saeko Chiba (as Itou Chika)</span>
+    <div class="grid">
+      <div class="container-lyrics">
+        <h2 class="lyrics intro" id="Intro1">Itou Chika Character Song</h2>
+        <span class="lyrics intro" id="Intro1-1">Strawberry Marshmallow Character Album</span>
+        <span class="lyrics intro" id="Intro2">Original story by : Barasui</span>
+        <span class="lyrics intro" id="Intro3">Provided by : Geneon Inc</span>
+        <h1 class="lyrics intro" id="Intro4">Sore Wa Suteki Na Showtime</h1>
+        <span class="lyrics intro" id="Intro4-1">"Sore" wa sutekina shōtaimu</span>
+        <span class="lyrics intro" id="Intro5">Sung by: Saeko Chiba (as Itou Chika)</span>
 
-      <span class="lyrics" id="Verse1-1">Yake ni heiwa na asa</span>
-      <span class="lyrics" id="Verse1-2">Puchi kodoku na shichue-shon</span>
-      <span class="lyrics" id="Verse2-1">Juwaki wo niramitsutsu</span>
-      <span class="lyrics" id="Verse2-2">Ridaiyaru no botan oshita</span>
-      <span class="lyrics" id="Verse3-1">Sakki kara hanashichuu bakka</span>
-      <span class="lyrics" id="Verse3-1-1">Ichijikan</span>
-      <span class="lyrics" id="Verse3-2">Nantoka shite yo nee kamisama</span>
-      <span class="lyrics" id="Verse4-1">Ripi-to suru</span>
-      <span class="lyrics" id="Verse4-1-1">Zetsubou</span>
-      <span class="lyrics" id="Verse4-2">Ripi-to shiro</span>
-      <span class="lyrics" id="Verse4-2-1">Kibou</span>
+        <span class="lyrics verse" id="Verse1-1">Yakeni heiwana asa<br />やけに平和な朝</span>
+        <span class="lyrics verse" id="Verse1-2">Puchi kodokuna shichuēshon<br />プチ孤独なシチュエーション</span>
+        <span class="lyrics verse" id="Verse2-1">Juwaki o niramitsutsu<br />受話器を睨みつつ</span>
+        <span class="lyrics verse" id="Verse2-2">Ridaiyaru no botan oshita<br />リダイヤルのボタン押した</span>
+        <span class="lyrics verse" id="Verse3-1">Sakki kara hanashichū bakka<br />さっきから話し中ばっか</span>
+        <span class="lyrics verse" id="Verse3-1-1">Ichijikan<br />１時間</span>
+        <span class="lyrics verse" id="Verse3-2">Nantoka shite yo ne e kamisama<br />なんとかして よ ねえ神様</span>
+        <span class="lyrics verse" id="Verse4-1">Ripīto suru<br />リピートする</span>
+        <span class="lyrics verse" id="Verse4-1-1">Zetsubō<br />絶望</span>
+        <span class="lyrics verse" id="Verse4-2">Ripīto shiro<br />リピートしろ</span>
+        <span class="lyrics verse" id="Verse4-2-1">Kibō<br />希望</span>
 
-      <span class="lyrics" id="Chorus1-1">Koe ga kikitai</span>
-      <span class="lyrics" id="Chorus1-2">Konna ni kikitai</span>
-      <span class="lyrics" id="Chorus2-1">Dekiru nara</span>
-      <span class="lyrics" id="Chorus2-1-1">Saizenretsu no</span>
-      <span class="lyrics" id="Chorus2-2">Domannaka ga ii</span>
-      <!-- Adlibs1-1 -->
-      <span class="lyrics" id="Chorus3-1">Kitto tsunagaru</span>
-      <span class="lyrics" id="Chorus3-2">Anata ni tsunagaru</span>
-      <span class="lyrics" id="Chorus4-1">"Chiketto wa</span>
-      <span class="lyrics" id="Chorus4-1-1">gogo ichiji kara</span>
-      <span class="lyrics" id="Chorus4-1-2">yoyaku kaishi desu"</span>
-      <!-- Adlibs1-2 -->
-    </div>
-    <div class="container-content">
-      <span class="adlibs" id="Adlib1-1">(Muri da yo ne-)</span>
-      <span class="adlibs" id="Adlib1-2">(Are- chotto hayakatta ka)</span>
+        <span class="lyrics chorus" id="Chorus1-1">Koe ga kikitai<br />声が聞きたい</span>
+        <span class="lyrics chorus" id="Chorus1-2">Kon'nani kikitai<br />こんなに聞きたい</span>
+        <span class="lyrics chorus" id="Chorus2-1">Dekirunara<br />できるなら</span>
+        <span class="lyrics chorus" id="Chorus2-1-1">Sai zenretsu no<br />最前列の</span>
+        <span class="lyrics chorus" id="Chorus2-2">Do man'naka ga ī<br />ド真ん中がいい</span>
+        <!-- Adlibs1-1 -->
+        <span class="lyrics chorus" id="Chorus3-1">Kitto tsunagaru<br />きっと繋がる</span>
+        <span class="lyrics chorus" id="Chorus3-2">Anata ni tsunagaru<br />あなたに繋がる</span>
+        <span class="lyrics adlib" id="Chorus4-1">"Chiketto wa<br />「チケットは-</span>
+        <span class="lyrics adlib" id="Chorus4-1-1">gogo ichiji kara<br />午後１時から-</span>
+        <span class="lyrics adlib" id="Chorus4-1-2">yoyaku kaishidesu"<br />予約開始です」</span>
+        <!-- Adlibs1-2 -->
+      </div>
+      <div class="container-adlibs">
+        <span class="adlibs adlib" id="Adlib1-1">(Murida yo ne- )<br />（ムリだよねー）</span>
+        <span class="adlibs adlib" id="Adlib1-2">(Are- chotto hayakatta ka)<br />（あれー ちょっと早かったか）</span>
+      </div>
+      <ul>
+        <li><a href="/index.html">Return</a></li>
+      </ul>
     </div>
     <script src="../js/itou-chika-main.js"></script>
-    <script src="../js/route.js"></script>
   </body>
 </html>
