--- a/index.html
+++ b/index.html
@@ -1,17 +1,20 @@
 <!DOCTYPE html>
 <html lang="id">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="css/styles.css" />
-    <title>Mashimaro TV</title>
-  </head>
-  <body>
-    <div class="home-container">
-      <h3>📺 Mashimaro TV</h3>
-      <ul>
-        <li><a href="itou-chika/index.html">Sore Wa Suteki Na Showtime</a></li>
-      </ul>
-    </div>
-  </body>
+	<head>
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<link rel="stylesheet" href="css/styles.css" />
+		<title>Mashimaro TV</title>
+	</head>
+	<body>
+		<div class="home-container">
+			<h3>📺 Mashimaro TV</h3>
+			<ul>
+				<li><a href="/app/itou-chika/index.html">Sore Wa Suteki Na Showtime</a></li>
+				<li><a href="/app/ana-coppola/index.html">Made In Onnanoko</a></li>
+				<li><a href="/app/sakuragi-matsuri/index.html">Miruku o Koboshite</a></li>
+				<li><a href="/app/matsuoka-miu/index.html">Osanpo Kyousoukyoku</a></li>
+			</ul>
+		</div>
+	</body>
 </html>
