--- a/app/matsuoka-miu/index.html
+++ b/app/matsuoka-miu/index.html
@@ -1,26 +1,41 @@
 <!DOCTYPE html>
-<html lang="id">
+<html lang="en">
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<link rel="stylesheet" href="../../css/styles.css" />
-		<!-- Howler CDN -->
-		<script src="https://cdnjs.cloudflare.com/ajax/libs/howler/2.2.3/howler.min.js"></script>
 		<title>Matsuoka Miu Character Song</title>
 	</head>
 	<body>
 		<h3>🍓 Strawberry Marshmallow</h3>
-		<div class="container-media-control">
-			<audio id="audio" src="audio.mp3" controls></audio>
-		</div>
 		<div class="grid">
-			<div class="lyrics" id="lyrics">
-				<p data-time="5">Verse 1: This is the first line of the lyrics</p>
-				<p data-time="10">Verse 1: This is the second line of the lyrics</p>
-				<p data-time="15">Chorus: This is the chorus of the song</p>
+			<div id="overflow">
+				<div class="lyrics" id="lyrics">
+					<p timestamp="0">Verse 1: This is the second line of the lyrics</p>
+					<p timestamp="3">Verse 2: This is the second line of the lyrics</p>
+					<p timestamp="6">Verse 3: This is the second line of the lyrics</p>
+					<p timestamp="9">Verse 4: This is the second line of the lyrics</p>
+					<p timestamp="12">Verse 5: This is the second line of the lyrics</p>
+					<p timestamp="15">Verse 6: This is the second line of the lyrics</p>
+					<p timestamp="18">Verse 7: This is the second line of the lyrics</p>
+					<p timestamp="21">Verse 8: This is the second line of the lyrics</p>
+					<p timestamp="24">Verse 9: This is the second line of the lyrics</p>
+					<p timestamp="27">Verse 10: This is the second line of the lyrics</p>
+					<p timestamp="30">Verse 11: This is the second line of the lyrics</p>
+					<p timestamp="33">Verse 12: This is the second line of the lyrics</p>
+					<p timestamp="36">Verse 13: This is the second line of the lyrics</p>
+					<p timestamp="39">Verse 14: This is the second line of the lyrics</p>
+					<p timestamp="42">Verse 15: This is the second line of the lyrics</p>
+					<p timestamp="45">Verse 16: This is the second line of the lyrics</p>
+					<p timestamp="48">Verse 17: This is the second line of the lyrics</p>
+					<p timestamp="51">Verse 18: This is the second line of the lyrics</p>
+					<p timestamp="54">Verse 19: This is the second line of the lyrics</p>
+					<p timestamp="57">Verse 20: This is the second line of the lyrics</p>
+					<p timestamp="60">Verse 21: This is the second line of the lyrics</p>
+				</div>
 			</div>
-			<div class="container-adlibs"></div>
 			<ul>
+				<li><audio id="audio" src="audio.mp3" controls>Your browser does not support the audio element.</audio></li>
 				<li><a href="/index.html">Return</a></li>
 			</ul>
 		</div>
