--- a/app/itou-chika/index.html
+++ b/app/itou-chika/index.html
@@ -7,37 +7,50 @@
 		<title>Itou Chika Character Song</title>
 	</head>
 	<body>
-		<h3>🍓 Strawberry Marshmallow</h3>
+		<h3><button id="toggleAutoScroll">🔒 Auto Scroll ON</button></h3>
 		<div class="grid">
-			<div id="overflow">
+			<div id="overflow" style="background-color: #d51515">
 				<div class="lyrics" id="lyrics">
-					<p timestamp="0">Verse 1: This is the second line of the lyrics</p>
-					<p timestamp="3">Verse 2: This is the second line of the lyrics</p>
-					<p timestamp="6">Verse 3: This is the second line of the lyrics</p>
-					<p timestamp="9">Verse 4: This is the second line of the lyrics</p>
-					<p timestamp="12">Verse 5: This is the second line of the lyrics</p>
-					<p timestamp="15">Verse 6: This is the second line of the lyrics</p>
-					<p timestamp="18">Verse 7: This is the second line of the lyrics</p>
-					<p timestamp="21">Verse 8: This is the second line of the lyrics</p>
-					<p timestamp="24">Verse 9: This is the second line of the lyrics</p>
-					<p timestamp="27">Verse 10: This is the second line of the lyrics</p>
-					<p timestamp="30">Verse 11: This is the second line of the lyrics</p>
-					<p timestamp="33">Verse 12: This is the second line of the lyrics</p>
-					<p timestamp="36">Verse 13: This is the second line of the lyrics</p>
-					<p timestamp="39">Verse 14: This is the second line of the lyrics</p>
-					<p timestamp="42">Verse 15: This is the second line of the lyrics</p>
-					<p timestamp="45">Verse 16: This is the second line of the lyrics</p>
-					<p timestamp="48">Verse 17: This is the second line of the lyrics</p>
-					<p timestamp="51">Verse 18: This is the second line of the lyrics</p>
-					<p timestamp="54">Verse 19: This is the second line of the lyrics</p>
-					<p timestamp="57">Verse 20: This is the second line of the lyrics</p>
-					<p timestamp="60">Verse 21: This is the second line of the lyrics</p>
+					<p timestamp="0.1">🎧 Itou Chika Character Song</p>
+					<p timestamp="4">🍓 Ichigo Mashimaro Chara-CD</p>
+					<p timestamp="8">Based on Barasui Manga Series</p>
+					<p timestamp="11">Provided by Geneon Inc</p>
+					<p timestamp="15">📱 Sore Wa Suteki Na Showtime</p>
+					<p timestamp="18.5">Sung by Saeko Chiba</p>
+					<p timestamp="22">🎵🎵🎵</p>
+					<p timestamp="28">Yake ni heiwa na asa puchi kodokuna shicue-shon</p>
+					<p timestamp="35">Juwaki wo niramitsutsu ridaiyaru no botan oshita</p>
+					<p timestamp="42.5">Sakki kara hanashichuu bakka ichijikan</p>
+					<p timestamp="49.5">Nantoka shite yo nee kamisama</p>
+					<p timestamp="54.5">Ripi-to suru zetsubou ripi-to shiro kibou</p>
+					<p timestamp="61.5">---</p>
+					<p timestamp="61.5">Koe ga kikitai konna ni kikitai</p>
+					<p timestamp="69">Dekiru nara saizenretsu no domannaka ga ii</p>
+					<p timestamp="75">😥 (Muri da yo ne-)</p>
+					<p timestamp="75.5">Kitto tsunagaru anata ni tsunagaru</p>
+					<p timestamp="83">"Chiketto wa gogo ichiji kara yoyaku kaishi desu"</p>
+					<p timestamp="90">😯 (Are- chotto hayakatta ka)</p>
+					<p timestamp="93">🎵🎵🎵</p>
+					<pre>Lyrics provided by <a href="https://www.animelyrics.com/anime/ichigomashimaro/sorewasutekin.htm">animelyrics↗</a></pre>
 				</div>
 			</div>
-			<ul>
-				<li><audio id="audio" src="audio.mp3" controls>Your browser does not support the audio element.</audio></li>
-				<li><a href="/index.html">Return</a></li>
-			</ul>
+			<div class="media">
+				<div class="card">
+					<img src="cover.jpg" alt="Cover Art" />
+					<h4>
+						<a href="https://anidb.net/song/90587">Sore Wa Suteki Na Showtime↗</a>
+						<br />
+						<small><a class="small-link" href="https://myanimelist.net/people/135/Saeko_Chiba">Saeko Chiba↗</a></small>
+					</h4>
+				</div>
+			</div>
+			<div class="footer">
+				<audio id="audio" src="audio.mp3" controls>Your browser does not support the audio element.</audio>
+				<a href="/index.html">
+					<h4>📺Mashimaro TV ><a href="/app/sakuragi-matsuri/index.html">> Miruku O Koboshite🥛</a></h4>
+				</a>
+				<small>DISCLAIMER : We did not provide the full song</small>
+			</div>
 		</div>
 		<script src="../../js/main.js"></script>
 	</body>
