--- a/index.html
+++ b/index.html
@@ -8,13 +8,17 @@
 	</head>
 	<body>
 		<div class="home-container">
-			<h3>📺 Mashimaro TV</h3>
+			<h3><a href="/index.html">📺Mashimaro TV</a></h3>
+			<small>Spotify-ish song lyrics in web form</small>
+			<h2>From <a href="https://myanimelist.net/anime/488/Ichigo_Mashimaro">🍓Ichigo Mashimaro↗</a> Anime Series</h2>
+			<small>⇩⇩⇩</small>
 			<ul>
-				<li><a href="/app/itou-chika/index.html">Sore Wa Suteki Na Showtime</a></li>
-				<li><a href="/app/ana-coppola/index.html">Made In Onnanoko</a></li>
-				<li><a href="/app/sakuragi-matsuri/index.html">Miruku o Koboshite</a></li>
-				<li><a href="/app/matsuoka-miu/index.html">Osanpo Kyousoukyoku</a></li>
+				<li><a href="/app/itou-chika/index.html">📱Sore Wa Suteki Na Showtime</a></li>
+				<li><a href="/app/sakuragi-matsuri/index.html">🥛Miruku O Koboshite</a></li>
+				<li><a href="/app/ana-coppola/index.html">👒Made In Onnanoko</a></li>
+				<li><a href="/app/matsuoka-miu/index.html">🎉Osanpo Kyousoukyoku</a></li>
 			</ul>
+			<div class="footer"><small>DISCLAIMER : We did not provide the full song</small></div>
 		</div>
 	</body>
 </html>
