--- a/app/ana-coppola/index.html
+++ b/app/ana-coppola/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="id">
+<html lang="en">
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -7,37 +7,47 @@
 		<title>Ana Coppola Character Song</title>
 	</head>
 	<body>
-		<h3>🍓 Strawberry Marshmallow</h3>
+		<h3><button id="toggleAutoScroll">🔒 Auto Scroll ON</button></h3>
 		<div class="grid">
-			<div id="overflow">
+			<div id="overflow" style="background-color: #009146">
 				<div class="lyrics" id="lyrics">
-					<p timestamp="0">Verse 1: This is the second line of the lyrics</p>
-					<p timestamp="3">Verse 2: This is the second line of the lyrics</p>
-					<p timestamp="6">Verse 3: This is the second line of the lyrics</p>
-					<p timestamp="9">Verse 4: This is the second line of the lyrics</p>
-					<p timestamp="12">Verse 5: This is the second line of the lyrics</p>
-					<p timestamp="15">Verse 6: This is the second line of the lyrics</p>
-					<p timestamp="18">Verse 7: This is the second line of the lyrics</p>
-					<p timestamp="21">Verse 8: This is the second line of the lyrics</p>
-					<p timestamp="24">Verse 9: This is the second line of the lyrics</p>
-					<p timestamp="27">Verse 10: This is the second line of the lyrics</p>
-					<p timestamp="30">Verse 11: This is the second line of the lyrics</p>
-					<p timestamp="33">Verse 12: This is the second line of the lyrics</p>
-					<p timestamp="36">Verse 13: This is the second line of the lyrics</p>
-					<p timestamp="39">Verse 14: This is the second line of the lyrics</p>
-					<p timestamp="42">Verse 15: This is the second line of the lyrics</p>
-					<p timestamp="45">Verse 16: This is the second line of the lyrics</p>
-					<p timestamp="48">Verse 17: This is the second line of the lyrics</p>
-					<p timestamp="51">Verse 18: This is the second line of the lyrics</p>
-					<p timestamp="54">Verse 19: This is the second line of the lyrics</p>
-					<p timestamp="57">Verse 20: This is the second line of the lyrics</p>
-					<p timestamp="60">Verse 21: This is the second line of the lyrics</p>
+					<p timestamp="0.1">👗 Ana Coppola Character Song</p>
+					<p timestamp="4">🍓 Ichigo Mashimaro Chara-CD</p>
+					<p timestamp="7.5">Based on Barasui Manga Series</p>
+					<p timestamp="11.5">Provided by Geneon Inc</p>
+					<p timestamp="13.5">👒 Made In Onnanoko</p>
+					<p timestamp="17">Sung by Mamiko Noto</p>
+					<p timestamp="19">🎵🎵🎵</p>
+					<p timestamp="21.5">Dare ni mo naisho ni shite mune no naka</p>
+					<p timestamp="29">Himeteta omoi yo uchi akerune</p>
+					<p timestamp="36.5">Donna toki mo itsumo nani shite mo</p>
+					<p timestamp="43.5">(Anata) ga ichiban suteki dawa</p>
+					<p timestamp="50">---</p>
+					<p timestamp="50">Shippai shitattene kitto 😉 daijobu</p>
+					<p timestamp="58.5">Sono egao dakede subete chara ni naru desho</p>
+					<p timestamp="66">Kyou mo hitori tsubuyaku kagami no mae [O.K]</p>
+					<p timestamp="73.5">👒 Onnanoko wa jibun ga daisuki nan desu</p>
+					<p timestamp="81">🎵🎵🎵</p>
+					<pre>Lyrics provided by <a href="https://www.animelyrics.com/anime/ichigomashimaro/madeinonnanoko.htm">animelyrics↗</a></pre>
 				</div>
 			</div>
-			<ul>
-				<li><audio id="audio" src="audio.mp3" controls>Your browser does not support the audio element.</audio></li>
-				<li><a href="/index.html">Return</a></li>
-			</ul>
+			<div class="media">
+				<div class="card">
+					<img src="cover.jpg" alt="Cover Art" />
+					<h4>
+						<a href="https://anidb.net/song/90571">Made In Onnanoko↗</a>
+						<br />
+						<small><a class="small-link" href="https://myanimelist.net/people/40/Mamiko_Noto">Mamiko Noto↗</a></small>
+					</h4>
+				</div>
+			</div>
+			<div class="footer">
+				<audio id="audio" src="audio.mp3" controls>Your browser does not support the audio element.</audio>
+				<a href="/index.html">
+					<h4>📺Mashimaro TV ><a href="/app/matsuoka-miu/index.html">> Osanpo Kyousoukyoku🎉</a></h4>
+				</a>
+				<small>DISCLAIMER : We did not provide the full song</small>
+			</div>
 		</div>
 		<script src="../../js/main.js"></script>
 	</body>
