--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="id">
+<html lang="en">
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -12,17 +12,60 @@
 	</head>
 	<body>
 		<div class="home-container">
-			<h3><a href="/index.html">📺Mashimaro TV</a></h3>
-			<small>Spotify-ish song lyrics in web form</small>
-			<h2>From <a href="https://myanimelist.net/anime/488/Ichigo_Mashimaro">🍓Ichigo Mashimaro↗</a> Anime Series</h2>
-			<small>⇩⇩⇩</small>
-			<ul>
-				<li><a href="/app/itou-chika/index.html">📱Sore Wa Suteki Na Showtime</a></li>
-				<li><a href="/app/sakuragi-matsuri/index.html">🥛Miruku O Koboshite</a></li>
-				<li><a href="/app/ana-coppola/index.html">👒Made In Onnanoko</a></li>
-				<li><a href="/app/matsuoka-miu/index.html">🎉Osanpo Kyousoukyoku</a></li>
-			</ul>
-			<div class="footer"><small>DISCLAIMER : We did not provide the full song</small></div>
+			<h3><a href="/">Mashimaro TV</a></h3>
+			<small>spotify-ish song lyrics in web form</small>
+			<h2>From <a href="https://myanimelist.net/anime/488/Ichigo_Mashimaro">Ichigo Mashimaro↗</a> Anime Series</h2>
+			<small>based on <a href="https://myanimelist.net/people/2355/Barasui">Barasui</a> manga series with the same title</small>
+			<h4>🍓🍓🍓</h4>
+		</div>
+		<div class="home-grid">
+			<div class="card">
+				<a href="/chara/chika/index.html">
+					<img src="/chara/chika/cover.jpg" alt="Cover Art" />
+				</a>
+				<a href="/chara/chika/index.html">
+					<ul>
+						<li>Sore Wa Suteki Na Showtime</li>
+						<li><small>Saeko Chiba</small></li>
+					</ul>
+				</a>
+			</div>
+			<div class="card">
+				<a href="/chara/matsuri/index.html">
+					<img src="/chara/matsuri/cover.jpg" alt="Cover Art" />
+				</a>
+				<a href="/chara/matsuri/index.html">
+					<ul>
+						<li>Miruku O Koboshite</li>
+						<li><small>Kawasumi Ayako</small></li>
+					</ul>
+				</a>
+			</div>
+			<div class="card">
+				<a href="/chara/ana/index.html">
+					<img src="/chara/ana/cover.jpg" alt="Cover Art" />
+				</a>
+				<a href="chara/ana/index.html">
+					<ul>
+						<li>Made In Onnanoko</li>
+						<li><small>Mamiko Noto</small></li>
+					</ul>
+				</a>
+			</div>
+			<div class="card">
+				<a href="/chara/miu/index.html">
+					<img src="/chara/miu/cover.jpg" alt="Cover Art" />
+				</a>
+				<a href="/chara/miu/index.html">
+					<ul>
+						<li>Osanpo Kyousoukyoku</li>
+						<li><small>Fumiko Orikasa</small></li>
+					</ul>
+				</a>
+			</div>
+			<div class="footer">
+				<small>DISCLAIMER : "Mashimaro TV" did not provide the full song. If you interested please support the original creator!</small>
+			</div>
 		</div>
 	</body>
 </html>
