--- a/chara/miu/index.html
+++ b/chara/miu/index.html
@@ -7,19 +7,22 @@
 		<title>Matsuoka Miu Character Song</title>
 	</head>
 	<body>
-		<h3><button id="toggleAutoScroll">🔒 Auto Scroll ON</button></h3>
+		<div class="header">
+			<h3><a href="/">Mashimaro TV</a></h3>
+			<button type="button" id="toggleAutoScroll">🔓 Lyrics Auto Scroll OFF</button>
+		</div>
 		<div class="grid">
 			<div id="overflow" style="background-color: #9b15d5">
 				<div class="lyrics" id="lyrics">
 					<p timestamp="0.1">Mina ohayo su, kyara-CD notori wo kazaru no wa mina no aidoru ittsumo kawaii matsuoka miu-chan da</p>
 					<p timestamp="9.5">Matteta no kai mattetan da ne iiko da, yappa otori tte koto wa ichiban ninkitte koto</p>
-					<p timestamp="17">Mieru na, e nani 😧 mou honban</p>
+					<p timestamp="17">Mieru na, e nani mou honban</p>
 					<p timestamp="20">---</p>
-					<p timestamp="20">🪙 Matsuoka Miu Character Song</p>
-					<p timestamp="20.5">🍓 Ichigo Mashimaro Chara-CD</p>
+					<p timestamp="20">Matsuoka Miu Character Song</p>
+					<p timestamp="20.5">Ichigo Mashimaro Chara-CD</p>
 					<p timestamp="21">Based on Barasui Manga Series</p>
 					<p timestamp="23">Provided by Geneon Inc</p>
-					<p timestamp="24">🎉 Osanpo Kyousoukyoku</p>
+					<p timestamp="24">Osanpo Kyousoukyoku</p>
 					<p timestamp="25.5">Sung by Fumiko Orikasa</p>
 					<p timestamp="25.5">---</p>
 					<p timestamp="27">Direkuta okya no baiorin mousukoshi agete, a tte nai okashii</p>
@@ -29,42 +32,76 @@
 					<p timestamp="43.5">Natsu no wan pide otome kouka tsuinteru yure tsuinteru yokan</p>
 					<p timestamp="49.5">Teku teku teku teku kado magatteku</p>
 					<p timestamp="52">Michi no mannaka ni dekkai mizu tamari utsusu</p>
-					<p timestamp="55">Naisu 👍 nante kawaii no</p>
+					<p timestamp="55">Naisu, nante kawaii no</p>
 					<p timestamp="57">Shibashi utsusu mitorete sugo su</p>
 					<p timestamp="60.5">---</p>
-					<p timestamp="60.5">Teku teku teku teku teku🚶🏼(teku teku teku)</p>
+					<p timestamp="60.5">Teku teku teku teku teku (teku teku teku)</p>
 					<p timestamp="66">Fuu fura fura fura fura (fura fura fura)</p>
 					<p timestamp="70.5">---</p>
 					<p timestamp="70.5">Choi haya aruki ohisama nikori</p>
 					<p timestamp="73.5">Kinjo no obasan attara pekori</p>
 					<p timestamp="76">Konna yoiko de pafekuto na watashi nanda kara</p>
 					<p timestamp="78.5">Negai wa soudawa sekai heiwa</p>
-					<p timestamp="81.5">😘 (Watashi to deto tte-)</p>
+					<p timestamp="81.5">(Watashi to deto tte-)</p>
 					<p timestamp="82.5">Ranrara urara ohayou minna mada neteru kana</p>
 					<p timestamp="88">Ranrara urara odokete sukippu suru</p>
 					<p timestamp="93.5">Ranrara urara nanda kana nodo kawai chatta na</p>
 					<p timestamp="98.5">Arara urara o saifu wasurete kichi yattana</p>
-					<p timestamp="104.5">💵 (Koko no kimi choto kozeni o kashitekurenai ka-)</p>
+					<p timestamp="104.5">(Koko no kimi choto kozeni o kashitekurenai ka-)</p>
 					<p timestamp="109">🎵🎵🎵</p>
-					<pre>Lyrics provided by <a href="http://www.animelyrics.com/anime/ichigomashimaro/osanpokyousou.htm">animelyrics↗</a></pre>
+					<pre>Lyrics provided by <a href="http://www.animelyrics.com/">animelyrics↗</a></pre>
 				</div>
 			</div>
 			<div class="media">
-				<div class="card">
-					<img src="cover.jpg" alt="Cover Art" />
-					<h4>
-						<a href="https://anidb.net/song/90589">Osanpo Kyousoukyoku↗</a>
-						<br />
-						<small><a class="small-link" href="https://myanimelist.net/people/152/Fumiko_Orikasa">Fumiko Orikasa↗</a></small>
-					</h4>
+				<div class="row">
+					<div class="card" style="border: white 3px solid">
+						<a href="./index.html">
+							<img src="cover.jpg" alt="Cover Art" />
+						</a>
+						<a href="./index.html">
+							<ul>
+								<li>Osanpo Kyousoukyoku</li>
+								<li><small>Fumiko Orikasa</small></li>
+							</ul>
+						</a>
+					</div>
+					<div class="card">
+						<a href="../chika/index.html">
+							<img src="../chika/cover.jpg" alt="Cover Art" />
+						</a>
+						<a href="../chika/index.html">
+							<ul>
+								<li>Sore Wa Suteki Na Showtime</li>
+								<li><small>Saeko Chiba</small></li>
+							</ul>
+						</a>
+					</div>
+					<div class="card">
+						<a href="../matsuri/index.html">
+							<img src="../matsuri/cover.jpg" alt="Cover Art" />
+						</a>
+						<a href="../matsuri/index.html">
+							<ul>
+								<li>Miruku O Koboshite</li>
+								<li><small>Kawasumi Ayako</small></li>
+							</ul>
+						</a>
+					</div>
+					<div class="card">
+						<a href="../ana/index.html">
+							<img src="../ana/cover.jpg" alt="Cover Art" />
+						</a>
+						<a href="../ana/index.html">
+							<ul>
+								<li>Made In Onnanoko</li>
+								<li><small>Mamiko Noto</small></li>
+							</ul>
+						</a>
+					</div>
 				</div>
 			</div>
 			<div class="footer">
 				<audio id="audio" src="audio.mp3" controls>Your browser does not support the audio element.</audio>
-				<a href="/index.html">
-					<h4>📺Mashimaro TV ><a href="/app/itou-chika/index.html">> Sore Wa Suteki Na Showtime📱</a></h4>
-				</a>
-				<small>DISCLAIMER : We did not provide the full song</small>
 			</div>
 		</div>
 		<script src="../../js/main.js"></script>
