--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 			<h3><a href="/">Mashimaro TV</a></h3>
 			<small>spotify-ish song lyrics in web form</small>
 			<h2>From <a href="https://myanimelist.net/anime/488/Ichigo_Mashimaro">Ichigo Mashimaro↗</a> Anime Series</h2>
-			<small>based on <a href="https://myanimelist.net/people/2355/Barasui">Barasui</a> manga series with the same title</small>
+			<small>based on <a href="https://myanimelist.net/people/2355/Barasui">Barasui↗</a> manga series with the same name</small>
 			<h4>🍓🍓🍓</h4>
 		</div>
 		<div class="home-grid">
