--- a/chara/ana/index.html
+++ b/chara/ana/index.html
@@ -34,6 +34,9 @@
 					<pre>Lyrics provided by <a href="https://www.animelyrics.com/">animelyrics↗</a></pre>
 				</div>
 			</div>
+			<div class="wrap">
+				<audio id="audio" class="wrap" src="audio.mp3" controls>Your browser does not support the audio element.</audio>
+			</div>
 			<div class="media">
 				<div class="row">
 					<div class="card" style="border: white 3px solid">
@@ -83,7 +86,7 @@
 				</div>
 			</div>
 			<div class="footer">
-				<audio id="audio" src="audio.mp3" controls>Your browser does not support the audio element.</audio>
+				<small>DISCLAIMER : "Mashimaro TV" did not provide the full song. If you interested please support the original creator!</small>
 			</div>
 		</div>
 		<script src="../../js/main.js"></script>
