--- a/chara/matsuri/index.html
+++ b/chara/matsuri/index.html
@@ -35,6 +35,9 @@
 					<pre>Lyrics provided by <a href="https://www.animelyrics.com">animelyrics↗</a></pre>
 				</div>
 			</div>
+			<div class="wrap">
+				<audio id="audio" class="wrap" src="audio.mp3" controls>Your browser does not support the audio element.</audio>
+			</div>
 			<div class="media">
 				<div class="row">
 					<div class="card" style="border: white 3px solid">
