--- a/chara/matsuri/index.html
+++ b/chara/matsuri/index.html
@@ -87,7 +87,7 @@
 				</div>
 			</div>
 			<div class="footer">
-				<audio id="audio" src="audio.mp3" controls>Your browser does not support the audio element.</audio>
+				<small>DISCLAIMER : "Mashimaro TV" did not provide the full song. If you interested please support the original creator!</small>
 			</div>
 		</div>
 		<script src="../../js/main.js"></script>
