--- a/chara/ana/index.html
+++ b/chara/ana/index.html
@@ -20,17 +20,17 @@
 					<p timestamp="11.5">Provided by Geneon Inc</p>
 					<p timestamp="13.5">Made In Onnanoko</p>
 					<p timestamp="17">Sung by Mamiko Noto</p>
-					<p timestamp="19">🎵🎵🎵</p>
+					<p timestamp="19">♫ ♫ ♫</p>
 					<p timestamp="21.5">Dare ni mo naisho ni shite mune no naka</p>
 					<p timestamp="29">Himeteta omoi yo uchi akerune</p>
 					<p timestamp="36.5">Donna toki mo itsumo nani shite mo</p>
 					<p timestamp="43.5">(Anata) ga ichiban suteki dawa</p>
-					<p timestamp="50">---</p>
+					<p timestamp="50">- - -</p>
 					<p timestamp="50">Shippai shitattene kitto daijobu</p>
 					<p timestamp="58.5">Sono egao dakede subete chara ni naru desho</p>
 					<p timestamp="66">Kyou mo hitori tsubuyaku kagami no mae [OK]</p>
 					<p timestamp="73.5">Onnanoko wa jibun ga daisuki nan desu</p>
-					<p timestamp="81">🎵🎵🎵</p>
+					<p timestamp="81">♫ ♫ ♫</p>
 					<pre>Lyrics provided by <a href="https://www.animelyrics.com/">animelyrics↗</a></pre>
 				</div>
 			</div>
