--- a/chara/matsuri/index.html
+++ b/chara/matsuri/index.html
@@ -20,18 +20,18 @@
 					<p timestamp="8">Provided by Geneon Inc</p>
 					<p timestamp="10">Miruku O Koboshite</p>
 					<p timestamp="12">Sung by Kawasumi Ayako</p>
-					<p timestamp="14">🎵🎵🎵</p>
+					<p timestamp="14">♫ ♫ ♫</p>
 					<p timestamp="16">Daisuki na daisuki na pinku no kutsu</p>
 					<p timestamp="24">Kake dashita shunkan ni tsumazuita no</p>
 					<p timestamp="32">Sotto sotto sotto sotto aruki daseba</p>
 					<p timestamp="39.5">Yukkurito shiroi kumo tsuite kita yo</p>
 					<p timestamp="47.5">Watashi no iru sekai wa minna minna isogashii chotto mattete</p>
-					<p timestamp="60.5">---</p>
+					<p timestamp="60.5">- - -</p>
 					<p timestamp="60.5">Te wo tsunagu no kana tooku made yuku no kana</p>
 					<p timestamp="68.5">Doushi yo naze ka naki sou ni matte shimau</p>
 					<p timestamp="77">Sakki koboshita miruku nano</p>
 					<p timestamp="84.5">Hitotsu bude subete kae teshimau fushigi</p>
-					<p timestamp="92.5">🎵🎵🎵</p>
+					<p timestamp="92.5">♫ ♫ ♫</p>
 					<pre>Lyrics provided by <a href="https://www.animelyrics.com">animelyrics↗</a></pre>
 				</div>
 			</div>
