--- a/chara/miu/index.html
+++ b/chara/miu/index.html
@@ -17,27 +17,27 @@
 					<p timestamp="0.1">Mina ohayo su, kyara-CD notori wo kazaru no wa mina no aidoru ittsumo kawaii matsuoka miu-chan da</p>
 					<p timestamp="9.5">Matteta no kai mattetan da ne iiko da, yappa otori tte koto wa ichiban ninkitte koto</p>
 					<p timestamp="17">Mieru na, e nani mou honban</p>
-					<p timestamp="20">---</p>
+					<p timestamp="20">- - -</p>
 					<p timestamp="20">Matsuoka Miu Character Song</p>
 					<p timestamp="20.5">Ichigo Mashimaro Chara-CD</p>
 					<p timestamp="21">Based on Barasui Manga Series</p>
 					<p timestamp="23">Provided by Geneon Inc</p>
 					<p timestamp="24">Osanpo Kyousoukyoku</p>
 					<p timestamp="25.5">Sung by Fumiko Orikasa</p>
-					<p timestamp="25.5">---</p>
+					<p timestamp="25.5">- - -</p>
 					<p timestamp="27">Direkuta okya no baiorin mousukoshi agete, a tte nai okashii</p>
 					<p timestamp="33">Maa ikka yoshi [OK] sorede wa ko koroshiki tamae</p>
-					<p timestamp="37.5">🎵 [YEAH] 🎵</p>
+					<p timestamp="37.5">♫ [YEAH] ♫</p>
 					<p timestamp="38.5">Hachi ji kishou de ohisama pikari kyou wa doko doko doko gou ka</p>
 					<p timestamp="43.5">Natsu no wan pide otome kouka tsuinteru yure tsuinteru yokan</p>
 					<p timestamp="49.5">Teku teku teku teku kado magatteku</p>
 					<p timestamp="52">Michi no mannaka ni dekkai mizu tamari utsusu</p>
 					<p timestamp="55">Naisu, nante kawaii no</p>
 					<p timestamp="57">Shibashi utsusu mitorete sugo su</p>
-					<p timestamp="60.5">---</p>
+					<p timestamp="60.5">- - -</p>
 					<p timestamp="60.5">Teku teku teku teku teku (teku teku teku)</p>
 					<p timestamp="66">Fuu fura fura fura fura (fura fura fura)</p>
-					<p timestamp="70.5">---</p>
+					<p timestamp="70.5">- - -</p>
 					<p timestamp="70.5">Choi haya aruki ohisama nikori</p>
 					<p timestamp="73.5">Kinjo no obasan attara pekori</p>
 					<p timestamp="76">Konna yoiko de pafekuto na watashi nanda kara</p>
@@ -48,7 +48,7 @@
 					<p timestamp="93.5">Ranrara urara nanda kana nodo kawai chatta na</p>
 					<p timestamp="98.5">Arara urara o saifu wasurete kichi yattana</p>
 					<p timestamp="104.5">(Koko no kimi choto kozeni o kashitekurenai ka-)</p>
-					<p timestamp="109">🎵🎵🎵</p>
+					<p timestamp="109">♫ ♫ ♫</p>
 					<pre>Lyrics provided by <a href="http://www.animelyrics.com/">animelyrics↗</a></pre>
 				</div>
 			</div>
