--- a/chara/chika/index.html
+++ b/chara/chika/index.html
@@ -20,20 +20,20 @@
 					<p timestamp="11">Provided by Geneon Inc</p>
 					<p timestamp="15">Sore Wa Suteki Na Showtime</p>
 					<p timestamp="18.5">Sung by Saeko Chiba</p>
-					<p timestamp="22">🎵🎵🎵</p>
+					<p timestamp="22">♫ ♫ ♫</p>
 					<p timestamp="28">Yake ni heiwa na asa puchi kodokuna shicue-shon</p>
 					<p timestamp="35">Juwaki wo niramitsutsu ridaiyaru no botan oshita</p>
 					<p timestamp="42.5">Sakki kara hanashichuu bakka ichijikan</p>
 					<p timestamp="49.5">Nantoka shite yo nee kamisama</p>
 					<p timestamp="54.5">Ripi-to suru zetsubou ripi-to shiro kibou</p>
-					<p timestamp="61.5">---</p>
+					<p timestamp="61.5">- - -</p>
 					<p timestamp="61.5">Koe ga kikitai konna ni kikitai</p>
 					<p timestamp="69">Dekiru nara saizenretsu no domannaka ga ii</p>
 					<p timestamp="75">(Muri da yo ne-)</p>
 					<p timestamp="75.5">Kitto tsunagaru anata ni tsunagaru</p>
 					<p timestamp="83">"Chiketto wa gogo ichiji kara yoyaku kaishi desu"</p>
 					<p timestamp="90">(Are- chotto hayakatta ka)</p>
-					<p timestamp="93">🎵🎵🎵</p>
+					<p timestamp="93">♫ ♫ ♫</p>
 					<pre>Lyrics provided by <a href="https://www.animelyrics.com/">animelyrics↗</a></pre>
 				</div>
 			</div>
