add github link

--- a/index.html
+++ b/index.html
@@ -13,9 +13,11 @@
 	<body>
 		<div class="home-container">
 			<h3><a href="/">Mashimaro TV</a></h3>
-			<small>spotify-ish song lyrics in web form</small>
-			<h2>From <a href="https://myanimelist.net/anime/488/Ichigo_Mashimaro">Ichigo Mashimaro↗</a> Anime Series</h2>
-			<small>based on <a href="https://myanimelist.net/people/2355/Barasui">Barasui↗</a> manga series with the same name</small>
+			<small>
+				spotify-ish song lyrics in web form. source code on <a href="https://github.com/ayunangarang/mashimaro-tv" target="_blank">github↗</a>
+			</small>
+			<h2>From <a href="https://myanimelist.net/anime/488/Ichigo_Mashimaro" target="_blank">Ichigo Mashimaro↗</a> Anime Series</h2>
+			<small>based on <a href="https://myanimelist.net/people/2355/Barasui" target="_blank">Barasui↗</a> manga series with the same name.</small>
 			<h4>🍓🍓🍓</h4>
 		</div>
 		<div class="home-grid">
