--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 		<div class="home-container">
 			<h3><a href="/">Mashimaro TV</a></h3>
 			<small>
-				spotify-ish song lyrics in web form. source code on <a href="https://github.com/ayunangarang/mashimaro-tv" target="_blank">github↗</a>
+				spotify-ish song lyrics in web form. documentation on <a href="https://github.com/ayunangarang/mashimaro-tv" target="_blank">github↗</a>
 			</small>
 			<h2>From <a href="https://myanimelist.net/anime/488/Ichigo_Mashimaro" target="_blank">Ichigo Mashimaro↗</a> Anime Series</h2>
 			<small>based on <a href="https://myanimelist.net/people/2355/Barasui" target="_blank">Barasui↗</a> manga series with the same name.</small>
