--- a/chara/miu/index.html
+++ b/chara/miu/index.html
@@ -3,15 +3,24 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<link rel="stylesheet" href="../../css/styles.css" />
-		<title>Matsuoka Miu Character Song</title>
+		<link rel="stylesheet" href="../../css/styles-min.css" />
+		<title>Osanpo Kyousoukyoku - Matsuoka Miu Character Song</title>
 	</head>
 	<body>
-		<div class="header">
-			<h3><a href="/">Mashimaro TV</a></h3>
-			<button type="button" id="toggleAutoScroll">🔓 Lyrics Auto Scroll OFF</button>
-		</div>
 		<div class="grid">
+			<nav>
+				<ul>
+					<li>
+						<h3><a href="/">Mashimaro TV</a></h3>
+					</li>
+					<li><a href="https://github.com/narayanagung/mashimaro-tv" target="_blank">github↗</a></li>
+				</ul>
+			</nav>
+			<div class="home-container">
+				<h1>Osanpo Kyousoukyoku</h1>
+				<h4>おさんぽ協奏曲</h4>
+				<button type="button" id="toggleAutoScroll">🔓 Lyrics Auto Scroll OFF</button>
+			</div>
 			<div id="overflow" style="background-color: #9b15d5">
 				<div class="lyrics" id="lyrics">
 					<p timestamp="0.1">Mina ohayo su, kyara-CD notori wo kazaru no wa mina no aidoru ittsumo kawaii matsuoka miu-chan da</p>
@@ -21,7 +30,7 @@
 					<p timestamp="20">Matsuoka Miu Character Song</p>
 					<p timestamp="20.5">Ichigo Mashimaro Chara-CD</p>
 					<p timestamp="21">Based on Barasui Manga Series</p>
-					<p timestamp="23">Provided by Geneon Inc</p>
+					<p timestamp="22.8">Provided by Geneon Inc</p>
 					<p timestamp="24">Osanpo Kyousoukyoku</p>
 					<p timestamp="25.5">Sung by Fumiko Orikasa</p>
 					<p timestamp="25.5">- - -</p>
@@ -57,7 +66,7 @@
 			</div>
 			<div class="media">
 				<div class="row">
-					<div class="card" style="border: white 3px solid">
+					<div class="card" style="border: white 2px solid">
 						<a href="./index.html">
 							<img src="cover.jpg" alt="Cover Art" />
 						</a>
@@ -107,6 +116,6 @@
 				<small>DISCLAIMER : "Mashimaro TV" did not provide the full song. If you interested please support the original creator!</small>
 			</div>
 		</div>
-		<script src="../../js/main.js"></script>
+		<script src="../../js/main-min.js"></script>
 	</body>
 </html>
