--- a/index.html
+++ b/index.html
@@ -7,20 +7,27 @@
 		<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
 		<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
 		<link rel="manifest" href="/site.webmanifest" />
-		<link rel="stylesheet" href="css/styles.css" />
+		<link rel="stylesheet" href="../../css/styles-min.css" />
 		<title>Mashimaro TV</title>
 	</head>
 	<body>
-		<div class="home-container">
-			<h3><a href="/">Mashimaro TV</a></h3>
-			<small>
-				spotify-ish song lyrics in web form. documentation on <a href="https://github.com/narayanagung/mashimaro-tv" target="_blank">github↗</a>
-			</small>
-			<h2>From <a href="https://myanimelist.net/anime/488/Ichigo_Mashimaro" target="_blank">Ichigo Mashimaro↗</a> Anime Series</h2>
-			<small>based on <a href="https://myanimelist.net/people/2355/Barasui" target="_blank">Barasui↗</a> manga series with the same name.</small>
-			<h4>🍓🍓🍓</h4>
-		</div>
 		<div class="home-grid">
+			<nav>
+				<ul>
+					<li>
+						<h3><a href="/">Mashimaro TV</a></h3>
+					</li>
+					<li><a href="https://github.com/narayanagung/mashimaro-tv" target="_blank">github↗</a></li>
+				</ul>
+			</nav>
+			<div class="home-container">
+				<h1>Spotify-ish Song Lyrics</h1>
+				<small>
+					From <a href="https://myanimelist.net/anime/488/Ichigo_Mashimaro" target="_blank">Ichigo Mashimaro↗</a> Anime Series by
+					<a href="https://myanimelist.net/people/2355/Barasui" target="_blank">Barasui↗</a>
+				</small>
+				<h4>🍓🍓🍓</h4>
+			</div>
 			<div class="card">
 				<a href="/chara/chika/index.html">
 					<img src="/chara/chika/cover.jpg" alt="Cover Art" />
