--- a/chara/chika/index.html
+++ b/chara/chika/index.html
@@ -3,15 +3,24 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<link rel="stylesheet" href="../../css/styles.css" />
-		<title>Itou Chika Character Song</title>
+		<link rel="stylesheet" href="../../css/styles-min.css" />
+		<title>Sore Wa Suteki Na Showtime - Itou Chika Character Song</title>
 	</head>
 	<body>
-		<div class="header">
-			<h3><a href="/">Mashimaro TV</a></h3>
-			<button type="button" id="toggleAutoScroll">🔓 Lyrics Auto Scroll OFF</button>
-		</div>
 		<div class="grid">
+			<nav>
+				<ul>
+					<li>
+						<h3><a href="/">Mashimaro TV</a></h3>
+					</li>
+					<li><a href="https://github.com/narayanagung/mashimaro-tv" target="_blank">github↗</a></li>
+				</ul>
+			</nav>
+			<div class="home-container">
+				<h1>Sore Wa Suteki Na Showtime</h1>
+				<h4>「ソレ」は素敵なショウタイム</h4>
+				<button type="button" id="toggleAutoScroll">🔓 Lyrics Auto Scroll OFF</button>
+			</div>
 			<div id="overflow" style="background-color: #d51515">
 				<div class="lyrics" id="lyrics">
 					<p timestamp="0.1">Itou Chika Character Song</p>
@@ -42,7 +51,7 @@
 			</div>
 			<div class="media">
 				<div class="row">
-					<div class="card" style="border: white 3px solid">
+					<div class="card" style="border: white 2px solid">
 						<a href="./index.html">
 							<img src="./cover.jpg" alt="Cover Art" />
 						</a>
@@ -92,6 +101,6 @@
 				<small>DISCLAIMER : "Mashimaro TV" did not provide the full song. If you interested please support the original creator!</small>
 			</div>
 		</div>
-		<script src="../../js/main.js"></script>
+		<script src="../../js/main-min.js"></script>
 	</body>
 </html>
